# cbir

./: .gitignore  feature_extraction.ipynb  main.py  pyproject.toml  search.ipynb  streamlit_app.py
cbir/: __init__.py  dataset.py  models.py  sanity.py  search.py
main-project/: models.py  utils.py
